--- a/r2/example.ini
+++ b/r2/example.ini
@@ -154,7 +154,7 @@ static_domain =
 trust_local_proxies = false
 # List of trusted proxy IPs.  May be bare IPs or CIDR network specs.  Currently,
 # only IPv4 addresses are supported.
-trusted_proxy_ips = 127.0.0.1, 10.0.0.0/8
+trusted_proxy_ranges = 127.0.0.1, 10.0.0.0/8
 # Location (directory) for temp files for diff3 merging
 # Empty will use python default for temp files
 diff3_temp_location =
