adding in honeycomb provider for analytics - honeycomb.io

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -74,6 +74,8 @@ modmail_email_secret = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
 mailgun_api_key =
 # request signing
 request_signature_secret = YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXowMTIzNDU2Nzg5
+# The API key for making calls to Honeycomb
+honeycomb_writekey =
 
 [DEFAULT]
 ############################################ SITE-SPECIFIC OPTIONS
@@ -284,6 +286,14 @@ statsd_addr =
 statsd_sample_rate = 1.0
 # percentage of stats for sampling (0-100)
 stats_sample_rate = 1
+
+############################################ ANALYTICS
+# where to send analytics
+analytics_provider = null
+# configuration for the honeycomb provider
+honeycomb_dataset = reddit_trial
+honeycomb_sample_rate = 100
+
 
 ############################################ EMAIL
 # which email provider to use
