Assign default value to az_selfserve_network_id

--- a/r2/example.ini
+++ b/r2/example.ini
@@ -203,7 +203,7 @@ wiki_page_stylesheets_everywhere =
 
 #### ads
 az_selfserve_priorities =
-az_selfserve_network_id =
+az_selfserve_network_id = 0
 
 #### Feature toggles
 disable_ads = false
