--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 sudo: required
-dist: trusty
 
 language: python
 
 python:
     - "2.7"
+    - "3.6"
+
+matrix:
+    allow_failures:
+        - python: "3.6"
 
 virtualenv:
     system_site_packages: true
@@ -18,6 +22,11 @@ install:
     - sudo install/travis.sh travis .
 
 before_script:
+    - pip install flake8
+    # stop the build if there are Python syntax errors or undefined names
+    - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+    # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+    - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - install/setup_rabbitmq.sh
     - install/setup_postgres.sh
     - install/setup_cassandra.sh
